# aiva

./: .gitignore  CHAT_WIDGET_ENHANCEMENTS.md  COMPLETE_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  QUICK_TEST_GUIDE.md  README.md  TESTING_CHECKLIST.md  VISUAL_CHANGES_GUIDE.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js
.husky/: pre-commit
backend/: .env.example  .gitignore  README.md  TESTING_GUIDE.md  pyproject.toml  requirements.txt  test_backend.py  test_database.py
backend/app/: __init__.py  main.py
backend/app/api/routes/: UPLOAD_README.md  auth.py  upload.py
backend/app/core/: __init__.py  config.py  deps.py  security.py
backend/app/db/: __init__.py  init_db.py  session.py
backend/app/models/: __init__.py  message.py  portfolio.py  share.py  user.py
backend/app/schemas/: __init__.py  auth.py  message.py  portfolio.py  share.py  upload.py  user.py
src/: App.css  App.tsx  index.css  main.tsx
src/components/: ChatContainer.tsx  ChatHeader.tsx  ChatInput.tsx  ChatWidget.tsx  ChatWidgetUI.tsx  ChatWidgetUI_Backup.tsx  ChatWidgetUI_Complete.tsx  ChatWidgetUI_Enhanced.tsx  ChatWidgetUI_Old.tsx  ConfirmDialog.tsx  DesktopChatHeader.tsx  DesktopChatInput.tsx  EnhancedChatInput.tsx  EnhancedMessageBubble.tsx  Hero.tsx  MessageBubble.tsx  QuickActionsSection.tsx  ReplyPreview.tsx  SuggestionList.tsx  WelcomeMessage.tsx
src/constants/: README.md  accessibilityLabels.ts  chatConstants.ts  dialogMessages.ts  heroConstants.ts  icons.tsx  uiControlLabels.ts  voiceControlLabels.ts
src/features/: ActionCards.tsx  (+13 more)
(+32 files in other folders)
